--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
             backdrop-filter: blur(3px);
             position: relative;
             max-width: 420px;
+            transition: background-image 1.5s ease-in-out; 
         }
 
         .chat-bubble {
@@ -134,14 +135,11 @@
     </div> -->
     <!-- 채팅 박스 -->
     <div class="w-full max-w-md bg-white shadow-lg rounded-lg p-4 relative" id="chat-container">
-        <div id="background-fade"></div>
+        <!-- <div id="background-fade"></div> -->
         <div id="messages"></div>
         <div class="loading" id="loading">로딩 중...</div>
     </div>
 
-<!-- GSAP 라이브러리 추가 -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
-   
 <script>
     document.addEventListener("DOMContentLoaded", () => {
         const bgMusic = document.getElementById("bg-music");
@@ -202,7 +200,6 @@
         const chatContainer = document.getElementById("chat-container");
         const messageContainer = document.getElementById("messages");
         const loadingIndicator = document.getElementById("loading");
-        const backgroundFade = document.getElementById("background-fade");
 
         let chatData = [];
         let currentIndex = 0;
@@ -211,56 +208,36 @@
 
 
         
-    // 사용할 배경 이미지 리스트 (image/1.jpg ~ image/30.jpg)
+    // 사용할 배경 이미지 리스트 (image/1.jpg ~ image/51.jpg)
     const backgroundImages = Array.from({ length: 51 }, (_, i) => `image/${i + 1}.jpg`);
     let currentImageIndex = 0;
 
-    // 초기에 1번 이미지 세팅
     function setDefaultBackground() {
-        chatContainer.style.backgroundImage = `url('${backgroundImages[0]}')`; // 기본 배경 1.jpg
-        backgroundFade.style.backgroundImage = `url('${backgroundImages[0]}')`; // 초기 배경도 동일하게 설정
-        console.log("초기 배경 이미지 설정:", backgroundImages[0]); // 디버그 로그
+        document.getElementById("chat-container").style.backgroundImage = `url('${backgroundImages[0]}')`;
+        console.log("✅ 초기 배경 이미지 설정:", backgroundImages[0]);
     }
 
-    // 일정한 시간 간격으로 배경 이미지 변경 (GSAP 애니메이션 적용)
     function changeBackgroundImage() {
         currentImageIndex = (currentImageIndex + 1) % backgroundImages.length;
         const newImage = backgroundImages[currentImageIndex];
 
-        console.log("변경할 배경 이미지:", newImage); // 적용 여부 확인 로그
+        console.log("🔄 변경할 배경 이미지:", newImage);
 
-        if (!backgroundFade) {
-            console.error("⚠️ `backgroundFade` 요소를 찾을 수 없습니다. HTML 구조를 확인하세요.");
-            return;
-        }
+        // backgroundFade.style.backgroundImage = `url('${newImage}')`;
+        // backgroundFade.style.opacity = 1; // 🔥 페이드인 효과
 
-        // 1. 새로운 이미지 설정 (fade-in 적용할 backgroundFade에 먼저 적용)
-        backgroundFade.style.backgroundImage = `url('${newImage}')`;
-        backgroundFade.style.zIndex = 2; // fade-in을 위에 위치시켜 전환 효과 적용
-
-        // 2. GSAP 애니메이션 적용 (부드러운 배경 변경)
-        gsap.fromTo(backgroundFade, 
-            { opacity: 0 }, // 기존에는 투명
-            { opacity: 1, duration: 1.5, ease: "power2.out", onComplete: () => {
-                // 3. chatContainer에 새로운 배경 설정
-                chatContainer.style.backgroundImage = `url('${newImage}')`;
-                backgroundFade.style.zIndex = 1; // 다시 낮춰서 새로운 배경 적용
-
-                console.log("배경 이미지 적용 완료:", newImage); // 확인 로그
-
-                // 4. 다시 fade-out 처리
-                gsap.to(backgroundFade, { opacity: 0, duration: 1.5, ease: "power2.in" });
-            }
-        });
+        setTimeout(() => {
+            document.getElementById("chat-container").style.backgroundImage = `url('${newImage}')`;
+            backgroundFade.style.opacity = 0; // 🔥 페이드아웃 효과
+        }, 1500); // 1.5초 후 기존 배경 변경
     }
 
-    // 페이지가 로드될 때 1번 이미지를 기본 배경으로 설정
+    // 초기 배경 설정
     setDefaultBackground();
 
-    // 일정 간격(5초)마다 배경 변경 (GSAP 애니메이션 적용)
-    setTimeout(() => {
-        setInterval(changeBackgroundImage, 5000);
-    }, 5000); // 5초 뒤부터 배경 변경 시작
+    // 일정 간격 (5초)마다 배경 변경
+    setInterval(changeBackgroundImage, 5000);
+
 
         // 채팅 위치로 이동하는 함수
         // 채팅 위치로 이동하는 함수
