--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
             padding: 12px;
             border-radius: 12px;
             opacity: 0.85;
+            max-width: 60%; /* 최대 너비 제한 */
         }
 
         .chat-user {
@@ -91,9 +92,10 @@
             font-size: 12px;
             color: rgb(0, 0, 0);
             margin-left: 8px;
+            display: none;
         }
 
-        @media (max-width: 640px) {
+        @media (max-width: 740px) {
             .macro-buttons {
                 max-width: 100%;
                 /* 모바일에서 가로폭 맞추기 */
@@ -106,9 +108,6 @@
                 box-shadow: none;
             }
 
-            .message {
-                max-width: 80%;
-            }
         }
     </style>
 </head>
@@ -334,11 +333,12 @@
             const messageElement = document.createElement("div");
             messageElement.className = `message-item flex ${isUser ? 'justify-start' : 'justify-end'} mb-4`;
             messageElement.innerHTML = `
-                <div class="max-w-xs p-3 rounded-lg chat-bubble ${isUser ? 'chat-user' : 'chat-other'} shadow-md">
+                <div class="p-3 rounded-lg chat-bubble ${isUser ? 'chat-user' : 'chat-other'} shadow-md">
                     <p class="text-xs font-bold">${sender} • ${time} <span class="message-index" data-index="${index}">#${index}</span></p>
                     <p class="mt-1">${text}</p>
                 </div>
             `;
+            
         
             messageContainer.appendChild(messageElement);
         }
